--- a/Microservices/Product-Application/Cart-Service/src/main/resources/application.properties
+++ b/Microservices/Product-Application/Cart-Service/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.application.name=cart-service
 server.port=8084
 management.endpoints.web.exposure.include=*
 
-spring.rabbitmq.addresses=amqps://jylmjeup:V5M3pXBFurIcS0EoK3TNErUWQ8MWWVsp@puffin.rmq2.cloudamqp.com/jylmjeup
 
 
+# Redis Database information
+#spring.redis.database=0
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.password=mypass
+#spring.redis.timeout=60000
