--- a/Microservices-Cloud/Eureka/Search-Service/pom.xml
+++ b/Microservices-Cloud/Eureka/Search-Service/pom.xml
@@ -97,6 +97,7 @@
 	</dependencyManagement>
 
 	<build>
+	<finalName>search-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
